# likey

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
.next/: trace
src/likey_backend/: Cargo.toml  likey_backend.did
src/likey_backend/src/: lib.rs
src/likey_backend/src/date_helper/: mod.rs
src/likey_backend/src/generate_swipe/: mod.rs
src/likey_backend/src/permission_helper/: mod.rs
src/likey_backend/src/random_helper/: mod.rs
src/likey_frontend/: middleware.tsx  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
src/likey_frontend/app/: data.tsx  dummy_data.tsx  firebaseConfig.tsx  globals.css  layout.tsx  model.tsx  page.tsx
src/likey_frontend/app/chat/: chatPage.tsx  emptyPage.tsx  page.tsx
src/likey_frontend/app/component/: dropdown.tsx  editableField.tsx  editablePicture.tsx  hobby.tsx  layout.tsx  navbar.tsx  removablePicture.tsx
src/likey_frontend/app/explore/: page.tsx
src/likey_frontend/app/history/: page.tsx
src/likey_frontend/app/home/: page.tsx
src/likey_frontend/app/home/pages/: explore.tsx
src/likey_frontend/app/interested/: page.tsx
src/likey_frontend/app/purchase/: page.tsx
src/likey_frontend/app/user/: model.tsx
src/likey_frontend/app/user/login/: page.tsx
src/likey_frontend/app/user/profile/: page.tsx
src/likey_frontend/app/user/register/: hobby.tsx  (+5 more)
src/likey_frontend/app/utility/: apiController.tsx  converter.tsx  cryptController.tsx  feedController.tsx  filterController.tsx  interestedController.tsx  loading.tsx  userDataController.tsx
src/likey_frontend/src/: App.jsx
