[package]
name = "likey_backend"
version = "0.1.0"
edition = "2021"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
regex = "1"
rust-argon2 = "2.1"
ic-kit = "0.4.8"
